compiler/test-data/parser/expressions/errors/unclosed_string.frel
module expressions.errors.unclosed_string

blueprint Bad {
    x : String = "hello
}
